commit changes on end of day.

--- a/NodeDemo/index.html
+++ b/NodeDemo/index.html
@@ -8,7 +8,7 @@
     <script src="script/jquery/jquery.js"></script>
 </head>
 <body>
-    <h1>This is a Test</h1>
+    <h1>Node / WebPack / Babel / JSHint / Minimizer </h1>
     <span id="sampleTest"></span><br/>
     <span id="sampleTest2"></span>
 
