--- a/NodeDemo/public/about.html
+++ b/NodeDemo/public/about.html
@@ -5,17 +5,16 @@
     <meta charset="utf-8" />
     <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <style>
-        body {
-            margin: 10px;
-        }
-    </style>
 
 </head>
 <body>
     <h1>This is the About Page</h1>
     <br />
     <a href="index.html">Back Home</a><br />
+
+    
+    <script src="public/assets/shared.js"></script>
+    <script src="public/assets/about.js"></script>
 
 </body>
 </html>
