--- a/NodeDemo/public/contact.html
+++ b/NodeDemo/public/contact.html
@@ -3,15 +3,16 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <style>
-        body{margin: 10px;}
-    </style>
+    <title></title>    
+    
 </head>
 <body>
     <h1>This is the Contact Page</h1>
     <br/>
     <a href="index.html">Back Home</a><br/>
+    
+    <script src="public/assets/shared.js"></script>
+    <script src="public/assets/contact.js"></script>
 </body>
 </html>
