--- a/NodeDemo/public/index.html
+++ b/NodeDemo/public/index.html
@@ -4,29 +4,34 @@
 <head>
     <meta charset="utf-8" />
     <title>Testing Node Webpack</title>
-    <!-- <link href="css/main.css" rel="stylesheet" /> -->
-    <!-- <script src="script/jquery/jquery.js"></script> -->
-
-    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-
+         
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <style>
-        body {margin: 10px;}
-        a {margin-right: 20px;}
-    </style>
 </head>
 <body>
-    <h1>Git / Node / WebPack / Babel / JSHint / Minimizer </h1>
+    <h1>Git / Node / WebPack / Babel / JSHint / SASS / LESS </h1>
     <span id="sampleTest"></span><br/>
     <span id="sampleTest2"></span>
 
     <br/><br/>
     <a href="About.html">About Page</a>
     <a href="contact.html">Contact Us</a><br/>
+    <br/><br/>
+
+    <!-- Testing of Webpack dealing with images -->
+    <div class="container">
+        <h2><span id="img_container"></span>This image required in (app.js)</h2>
+        <h3><span><img class="bg_header_img"/></span>This image via incline css bg image (app.css) </h3>
+    </div>
 
 
-    <script src="public/assets/js/bundle.js"></script>
+    <span id="chungTest">ChungTest</span>
+
+    <link rel="stylesheet" href="public/assets/style.css" />
+    <script src="public/assets/shared.js"></script>
+    <script src="public/assets/main.js"></script>
+
+    <!--<script src="public/assets/js/bundle.js"></script>-->
 </body>
 
 </html>
